Fix bocList scrollbar bug for IE7 (RM-2635)
git-svn-id: https://svn.re-motion.org/svn/Remotion/trunk@17135 cb0deee2-328e-b949-94ea-fb3139fab790

--- a/Remotion/ObjectBinding/Web/Res/Themes/ClassicBlue/HTML/BocList.css
+++ b/Remotion/ObjectBinding/Web/Res/Themes/ClassicBlue/HTML/BocList.css
@@ -94,6 +94,12 @@ div.bocListFakeTableHead table
   border-style: none;
 }
 
+body.msie7 table.bocListTable,
+body.msie7 div.bocListFakeTableHead table
+{
+  width: 98%;
+}
+
 /*  Style applied to the table head block of the BocList's table.  */
 tbody.bocListTableBody
 {
