--- a/Remotion/ObjectBinding/Web/Res/Themes/NovaBlue/Html/BocList.css
+++ b/Remotion/ObjectBinding/Web/Res/Themes/NovaBlue/Html/BocList.css
@@ -94,6 +94,12 @@ div.bocListFakeTableHead table
   border-style: none;
 }
 
+body.msie7 table.bocListTable,
+body.msie7 div.bocListFakeTableHead table
+{
+  width: 98%;
+}
+
 /*  Style applied to the table head block of the BocList's table.  */
 tbody.bocListTableBody
 {
@@ -121,7 +127,7 @@ body.msie7 th.bocListTitleCell *
 
 body.msie7 th.bocListTitleCell
 {
-  border-bottom-width: 2px;
+  border-bottom-width: 1px;
 }
 
 th.bocListTitleCell span
